--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,3 @@
-page-parameter:
-  default:
-    pageSize: 10
-  max:
-    pageSize: 50
-
-repeat:
-  submission:
-    expire: 120
-
 server:
   port: 9000
 
@@ -16,6 +6,12 @@ mybatis:
   config-location: classpath:conf/mybatis/mybatis-configuration.xml
 
 spring:
+  rabbitmq:
+    virtual-host: dc3
+    host: 10.10.77.246
+    port: 5672
+    username: dc3
+    password: dc3
   elasticsearch:
     bboss:
       icp-view:
@@ -24,7 +20,7 @@ spring:
         elasticPassword:
         elasticsearch:
           rest:
-            hostNames: 123.207.210.78:9200
+            hostNames: 10.10.77.246:19200
           dateFormat: yyyy.MM.dd HH:mm:ss
           timeZone: Asia/Shanghai
           showTemplate: true
@@ -63,15 +59,17 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     read:
-      url: jdbc:mysql://10.10.77.220:3306/icp-cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
       username: root
-      password: zsrj@2022
+      password: ok123
       driverClassName: com.mysql.jdbc.Driver
     write:
-      url: jdbc:mysql://10.10.77.220:3306/icp-cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&nullCatalogMeansCurrent=true
       username: root
-      password: zsrj@2022
+      password: ok123
       driverClassName: com.mysql.jdbc.Driver
+    dynamic:
+      primary: write
   cloud:
     gateway:
       enabled: true
@@ -85,9 +83,9 @@ spring:
           predicates:
             - Path=/api/**
           filters:
-#            - 省略第一个路径地址api
+            #            - 省略第一个路径地址api
             - StripPrefix=1
-#            - 把请求路径中的api替换成空
+            #            - 把请求路径中的api替换成空
             - RewritePath=/api/(?<segment>.*),/$\{segment}
 #        - id: test_route
 #          uri: http://127.0.0.1:9000
